# pydantic-settings-demo

./: .env  .env.dev  .env.prod  .python-version  README.md  main.py  pyproject.toml
