[project]
name = "pydantic-settings-demo"
version = "0.1.0"
description = "A demonstration of loading configuration settings from environment variables and .env files using Pydantic V2"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Matthew Davidson", email = "info@davidson.engineering" }]
license = { text = "MIT" }
dependencies = ["pydantic>=2.9.2,<3.0.0", "pydantic-settings>=2.5.2,<3.0.0"]
keywords = ["pydantic", "configuration", "environment-variables", "settings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "black>=24.10.0,<25.0.0",
    "isort>=5.13.2,<6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/davidson.engineering/pydantic-settings-demo"
"Repository" = "https://github.com/davidson.engineering/pydantic-settings-demo.git"
"Bug Tracker" = "https://github.com/davidson.engineering/pydantic-settings-demo/issues"

[project.scripts]
pydantic-envar-demo = "pydantic_envar_demo.__main__:main"

[tool.pytest.ini_options]
addopts = "-v --cov=pydantic_envar_test --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
